# surveillance-system

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  EDGE_SERVICE_DOCUMENTATION_SUMMARY.md  EDGE_SERVICE_MODERNIZATION_SUMMARY.md  ENCRYPTION_IMPLEMENTATION_COMPLETE.md  HOW-IT-WORKS.md  Makefile  PRODUCTION_OPTIMIZATION_GUIDE.md  PRODUCTION_READY.md  QUICKSTART.md  RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  README-KURULUM.md  README.md  README.md.bak  SCALING_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SYSTEM_INTEGRATION_GUIDE.md  check-status.ps1  codespace-setup.sh  complete-wsl-setup.ps1  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.retention.yml  docker-compose.scaling.yml  docker-compose.yml  final_validation.py  fix-docker.ps1  fix-dockerfiles.ps1  fix-wsl-simple.ps1  mkdocs.yml  nginx_scaling.conf  pyproject.toml  pytest.ini  quick-start.ps1  requirements.txt  setup-dev.ps1  (+9 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml  markdown-link-check-config.json
advanced_rag_service/: Dockerfile  advanced_caching.py  advanced_rag.py  api_versioning.py  config.py  dependency_injection.py  enhanced_advanced_rag.py  error_handling.py  main.py  metrics.py  performance.py  requirements-prod.txt  requirements.txt  service_status.py  validate_error_handling.py
agent_orchestrator/: Dockerfile  advanced_load_balancer.py  api_documentation_enhancements.py  api_key_manager.py  auth.py  auth_app.py  auth_config_example.env  auth_demo.py  auth_endpoints.py  circuit_breaker.py  complete_integration_demo.py  comprehensive_monitoring.py  config.py  database.py  db_service.py  distributed_config.py  distributed_orchestrator.py  distributed_router.py  enhanced_circuit_breaker.py  enhanced_endpoints.py  enhanced_endpoints_authenticated.py  enhanced_orchestrator.py  enhanced_router.py  enhanced_security.py  enhanced_semantic_demo.py  enhanced_usage_example.py  health_check.py  k8s-deployment.yaml  kafka_integration.py  load_balancing_endpoints.py  load_balancing_router.py  load_balancing_usage_examples.py  main.py  metrics.py  migrate_db.py  models.py  monitoring_api.py  monitoring_config.py  orchestrator.py  pytest.ini  (+10 more)
ai_dashboard_service/: CI_INTEGRATION.md  DOCUMENTATION_ENHANCEMENT_SUMMARY.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  TESTING_IMPLEMENTATION_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  main.py  requirements.txt
annotation_frontend/: .github_workflows_dependency-validation.yml  DEPENDENCY_MANAGEMENT.md  Dockerfile  Dockerfile.test  E2E_IMPLEMENTATION_SUMMARY.md  ENCRYPTION.md  ENDPOINT_ALIGNMENT_IMPLEMENTATION_SUMMARY.md  ENDPOINT_ALIGNMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.e2e  PERFORMANCE_ENHANCEMENTS.md  QUICK_SUMMARY.md  REFACTORING_SUMMARY.md  SCALING_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TESTING_IMPLEMENTATION_SUMMARY.md  XSS_HARDENING_SUMMARY.md  XSS_PROTECTION_README.md  auth.py  background_tasks.py  ci_validate_deps.ps1  ci_validate_deps.sh  ci_validate_deps_fixed.ps1  config.py  crypto.py  data_subject.py  database.py  demo_encryption.py  demo_xss_protection.py  docker-compose-scaling.yml  encryption_status_report.py  integration_test.py  jest.setup.js  kafka_pool.py  kafka_retry.py  main.py  main_optimized.py  main_original.py  models.py  (+24 more)
api_gateway/: BACKWARDS_COMPATIBILITY.md  Dockerfile  main.py  redirect_demo.py  requirements.txt  test_redirect.py  test_redirects.ps1  test_redirects.sh
docker/: edge-inference-app.py  edge-inference.Dockerfile
docs/: DOWNSTREAM_INTEGRATION.md  EDGE_SERVICE_DEPENDENCIES.md  ENCRYPTION_DEPLOYMENT.md  ENCRYPTION_README.md  FACE_ANONYMIZATION.md  README.md  annotation_user_guide.md  api.md  architecture.md  configuration.md  index.md  installation.md  integration.md  mlflow-quickstart.md  quickstart.md  troubleshooting.md
drift_service_folder/: Dockerfile  __init__.py  main.py  requirements.txt
edge_service/: .dockerignore  Dockerfile  PERFORMANCE_OPTIMIZATION_COMPLETE.md  README.md  config.py  demo_mqtt_client.py  docker-compose.yml  face_anonymization.py  inference.py  main.py  monitoring.py  monitoring_thread.py  mqtt_client.py  preprocessing.py  requirements.txt  requirements_edge_service.txt  run_mqtt_tests.py  setup_face_models.py  test_imports.py  validate_implementation.py  validate_mqtt_setup.py
enhanced_prompt_service/: API_VERSIONING_AND_HEALTH_PROBES_IMPLEMENTATION.md  DEPENDENCY_AUDIT_REPORT.md  DOWNSTREAM_INTEGRATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MODULAR_ROUTER_REFACTOR_SUMMARY.md  Makefile  README.md  SECURITY_HARDENING_SUMMARY.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_IMPLEMENTATION_STATUS.md  STATELESS_REFACTOR_SUMMARY.md  __init__.py  clip_store.py  conversation_manager.py  conversation_manager_new.py  llm_client.py  main.py  pytest.ini  requirements.txt  run_integration_tests.py  run_tests.py  schemas.py  test_integration.py  test_live_endpoints.py  validate_implementation.py  validate_security_hardening.py  validate_tests.py  verify_startup.py  weaviate_client.py
shared/: auth.py  (+11 more)
(+695 files in other folders)
